# nanobanan-cli

./: .gitignore  Cargo.toml  README.md  test_request.json
src/: config.rs  db.rs  http_client.rs  main.rs
src/api/: mod.rs  types.rs
src/cli/: mod.rs
src/cli/commands/: config.rs  edit.rs  generate.rs  jobs.rs  mod.rs
src/core/: error.rs  job.rs  mod.rs  params.rs
src/tui/: app.rs  event_handler.rs  mod.rs  ui.rs
