[package]
name = "nanobanan-cli"
version = "0.1.0"
edition = "2021"
authors = ["Christian Weinmayr"]
description = "Nano Banana Pro CLI - A Rust CLI for Google Gemini image generation"
license = "MIT"
repository = "https://github.com/christianweinmayr/nanobanan-cli"

[[bin]]
name = "banana"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Image display (using older version for Rust 1.78 compatibility)
viuer = "0.7"
image = "0.24"

# Utilities
base64 = "0.22"
directories = "5"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
colored = "2"
indicatif = "0.17"
futures-util = "0.3"
async-channel = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
